# reachy_mini_dances_library

./: .gitignore  README.md  pyproject.toml
.github/workflows/: wheels.yml
examples/: dance_demo.py
examples/choreographies/: another_one_bites_the_dust.json
src/reachy_mini_dances_library/: __init__.py  dance_move.py  rhythmic_motion.py
src/reachy_mini_dances_library/collection/: __init__.py  dance.py  forbidden.py
