[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_dances_library"
version = "0.2.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "reachy_mini==0.1.0", # Not released yet (should be soon)
    # "reachy_mini@git+ssh://git@github.com/pollen-robotics/reachy_mini@develop",
]


[project.optional-dependencies]
dev = ["pytest", "ruff==0.12.0"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
reachy_mini_dances_library = ["**/*"] # All non .py files

[tool.ruff]
exclude = []
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]
